@@ -1,3 +1,11 @@
+Tue Aug  7 12:37:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Deployment/Handlers/Component_Handler.cpp:
+          Fixed incorrect debug statements
+
+        * ciao/Deployment/Interceptors/Name_Utilities.h:
+          Layout changes
+
 Tue Aug  7 08:01:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
